--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "aws-dynamodb-local": "^0.0.11",
     "serverless": "^4.17.2",
     "serverless-dynamodb": "^0.2.56",
     "serverless-offline": "^14.4.0",
